--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,6 +100,11 @@ a {
   text-decoration: none;
 }
 
+.title-container {
+  font-size: 1.25 rem;
+  font-weight: 600;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
