--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,6 +104,11 @@ a {
   font-size: 1.25 rem;
   font-weight: 600;
 }
+input, select, option {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
