--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,6 +95,16 @@ body {
   font-family: 'Roboto, sans-serif';
 }
 
+.white-text {
+  color: white;
+}
+.large-text {
+  font-size: 1.65rem;
+}
+button {
+  background-color: #FF8400 !important;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -105,9 +115,18 @@ a {
   font-weight: 600;
 }
 input, select, option {
-  background-color: white;
-  color: black;
-  border: 1px solid black;
+  padding: 6px 10px;
+  background-color: #FFB400 !important;
+}
+
+.w-30 {
+  width: 30%;
+}
+.w-50 {
+  width: 50%;
+}
+.w-100 {
+  width: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
